# vulkan-graphics3d

Win32OffscreenVulkan/: Resource.h  Win32OffscreenVulkan.vcxproj  Win32OffscreenVulkan.vcxproj.filters  shader_frag.spv.h  win32_offscreen_vulkan.cpp
continuum/: CMakeLists.txt  _.cpp  _.h  _vulkan.h  application.cpp  application.h  application3d.cpp  application3d.h  deployment.rc  document.cpp  document.h  impact.cpp  impact.h  lowland_continuum.vcxproj  lowland_continuum.vcxproj.filters  main_frame.cpp  main_frame.h  matter.txt  pane_impact.cpp  pane_impact.h  system_basic_render.cpp  system_basic_render.h  system_point_light.cpp  system_point_light.h  vulkan_graphics3d_continuum.filters  vulkan_graphics3d_continuum.vcxproj  vulkan_graphics3d_continuum.vcxproj.filters  vulkan_land_continuum.vcxproj  vulkan_land_continuum.vcxproj.filters
continuum/AppCore/: vk_application.cpp  vk_application.h  vk_core.cpp  vk_window.cpp
continuum/IMCommon/: vk_types.h
continuum/Renderer/: vk_buffer.cpp  vk_renderer.cpp  vk_renderer.h
continuum/Renderer/Types/: vk_basicRenderSystem.cpp  vk_pointLightSystem.cpp  vk_pointLightSystem.h
continuum/VK_abstraction/: vk_camera.cpp  vk_camera.h  vk_descriptors.cpp  vk_device.cpp  vk_device.h  vk_gameObject.cpp  vk_gameObject.h  vk_initializers.cpp  vk_input.cpp  vk_input.h  vk_model.cpp  vk_model.h  vk_offscreen.cpp  vk_pipeline.cpp  vk_renderpass.h  vk_swapchain.cpp
continuum/__implement/: CMakeLists.txt  Package10.appxmanifest  _ios_lowland_continuum.entitlements  _static_factory_.inl  main.cpp  nord_impl_lowland_continuum.vcxproj  nord_impl_lowland_continuum.vcxproj.filters  shared_lowland_continuum.vcxproj  shared_lowland_continuum.vcxproj.filters  shared_vulkan_graphics3d_continuum.vcxproj  uwp_lowland_continuum.vcxproj  uwp_vulkan_graphics3d_continuum_TemporaryKey.pfx  uwp_vulkan_land_continuum.vcxproj.filters
continuum/__implement/_ios_lowland_continuum.xcodeproj/: project.pbxproj
continuum/__implement/_ios_lowland_continuum.xcodeproj/xcshareddata/xcschemes/: _ios_lowland_continuum.xcscheme
continuum/__implement/_lowland_continuum.xcodeproj/xcshareddata/xcschemes/: _lowland_continuum.xcscheme  output_lowland_continuum.xcscheme
continuum/__implement/_vulkan_graphics3d_continuum.xcodeproj/: project.pbxproj
continuum/__implement/ios/: Info.plist  Launch Screen.storyboard
continuum/__implement/macos/en.lproj/: InfoPlist.strings
continuum/__implement/vulkan_land_continuum.xcodeproj/: project.pbxproj
continuum/__implement/vulkan_land_continuum.xcodeproj/xcshareddata/xcschemes/: _vulkan_land_continuum.xcscheme
continuum/scene/: main.cpp  main.h
continuum/src/AppCore/: vk_core.cpp  vk_core.h  vk_window.cpp
continuum/src/Renderer/Types/: vk_basicRenderSystem.cpp
continuum/src/VK_abstraction/: vk_descriptors.cpp
graphics3d_vulkan/: CMakeLists.txt  Package.appxmanifest  Package10.appxmanifest  _.cpp  _.h  _factory.cpp  _vulkan.h  aaa_camera.cpp  aaa_camera.h  aaa_window.h  and_vulken.vcxproj  application.cpp  application.h  application_handler.cpp  application_handler.h  application_object.cpp  application_object.h  buffer.cpp  buffer.h  camera.cpp  camera.h  container.h  context.cpp  context.h  descriptors.cpp  descriptors.h  device.cpp  device.h  engine.cpp  engine.h  frame.h  frame_info.h  framework.h  game_object.cpp  game_object.h  graphics3d_vulkan.vcxproj  graphics3d_vulkan.vcxproj.filters  initializers.cpp  initializers.h  input.cpp  (+26 more)
landen/: CMakeLists.txt  _.cpp  _.h  _user.h  _vulkan.h  aaa_edit_impact.cpp  aaa_edit_impact.h  aaa_pane_impact.cpp  aaa_toggle_impact.cpp  aaa_window.cpp  aaa_window.h  application.cpp  application.h  application3d.cpp  application3d.h  deployment.rc  document.cpp  document.h  frame.cpp  frame.h  framework.h  impact.cpp  impact.h  lowland_landen.vcxproj  lowland_landen.vcxproj.filters  m_vulken.vcxproj  m_vulken.vcxproj.filters  matter.txt  vulkan_graphics3d_landen.vcxproj  vulkan_graphics3d_landen.vcxproj.filters  vulkan_land_landen.vcxproj  vulkan_land_landen.vcxproj.filters  winmetro_app_core_TemporaryKey.pfx
landen/__implement/: CMakeLists.txt  imgui.ini  main.cpp  nord_impl_app_core_hello_multiverse.vcxproj  shared_lowland_landen.vcxproj  shared_vulkan_graphics3d_landen.vcxproj  uwp_app_core_hello_multiverse.vcxproj  uwp_app_core_hello_multiverse_TemporaryKey.pfx
landen/__implement/_ios_app_core_hello_multiverse.xcodeproj/xcshareddata/xcschemes/: _ios_app_core_hello_multiverse.xcscheme
landen/__implement/_vulkan_graphics3d_landen.xcodeproj/xcshareddata/xcschemes/: _vulkan_graphics3d_landen.xcscheme  output_vulkan_graphics3d_landen.xcscheme
landen/__implement/_vulkan_land_landen.xcodeproj/: project.pbxproj
landen/__implement/lowland_landen.xcodeproj/: project.pbxproj
landen/__implement/macos/: animated_wallpaper.h
landen/scene/: main.cpp  main.h
landen/vulkan/: Entrypoints.h  VulkanAndroid.cpp  VulkanAndroid.h  VulkanBaseApplicationNoSwapChain.cpp  VulkanBaseApplicationNoSwapChain.h  VulkanBaseApplicationWithSwapChain.cpp  VulkanBaseApplicationWithSwapChain.h  VulkanBuffer.cpp  VulkanDebug.cpp  VulkanDevice.cpp  VulkanExampleRenderHeadless.cpp  VulkanExampleRenderHeadless.h  VulkanInitializers.h  VulkanOffscreenApplication.cpp  VulkanOffscreenApplication.h  VulkanRaytracingSample.cpp  VulkanRaytracingSample.h  VulkanSwapChain.cpp  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanglTFModel.cpp  VulkanglTFModel.h  aaa_VulkanInitializers.hpp  aaa_vkc_types.h  aaavulkanexamplebase.h  android.h  application.cpp  application.h  base_application_no_swap_chain.cpp  base_application_no_swap_chain.h  base_application_with_swap_chain.cpp  base_application_with_swap_chain.h  benchmark.h  buffer.cpp  buffer.h  camera.h  (+46 more)
landen/vulkan_land_landen.xcodeproj/: project.pbxproj
landen1/: _.h  _dependencies.txt  _references.txt  aaa_child_frame.cpp  aaa_child_frame.h  aaa_main_impact.cpp  aaa_main_impact.h  aaa_pane_impact.h  aaa_toggle_impact.h  aaa_top_impact.cpp  aaa_top_impact.h  application.cpp  document.h  (+8 more)
(+76 files in other folders)
